{
    "name": "DefaultInput",
    "maps": [
        {
            "name": "Player",
            "id": "77349436-f160-4893-88ab-bf3b7145e168",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "87cedadd-5c4a-4dd4-85f2-8592f9c5e8b1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "View",
                    "type": "PassThrough",
                    "id": "22f6594b-7f26-40f2-a5d5-6ca2c7d26052",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6de3c895-e6a5-467d-adab-153b4c9a5aed",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7733d34e-b375-4369-a483-d8045522f909",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WSAD",
                    "id": "ae2a0604-308a-4a19-8640-774052a6109d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "000f6064-fe9f-4d2e-b461-245702adf1f0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "05c174e7-14e5-42c3-9ee8-831638500233",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "334b8439-98ff-4257-bc75-23829b18f4cb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f320ecf0-cd98-46a7-a023-2734eda8fe31",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Weapon",
            "id": "60b7f9c9-1bf7-4533-ae27-84e28b75a4e1",
            "actions": [
                {
                    "name": "Fire1Pressed",
                    "type": "Button",
                    "id": "f1a1d3eb-d5c1-48e9-9c18-9e8b4384dfcf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire1Released",
                    "type": "Button",
                    "id": "96cfab09-4b7a-4b82-b325-2b1b5f65ffa1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "fire",
                    "type": "Button",
                    "id": "1da220de-4114-4dac-a545-f3ea86358f33",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6d4fbaa3-7458-44ec-b4c2-fa295eaf1c12",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1Pressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07dbcd1a-4f24-42d0-a61f-cb3da28fa70f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1Released",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1245a73e-1769-4d9b-9cd0-05f5824e0a68",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ChangeWeapon",
            "id": "47fc0c78-7e7e-4e6c-b3d4-245489549661",
            "actions": [
                {
                    "name": "changeToNext",
                    "type": "Value",
                    "id": "5d933408-48cd-44cf-97ef-6d84ac62e2c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b3f05dbf-5790-4edc-80c1-0ed551186c1a",
                    "path": "<Keyboard>/#(E)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "changeToNext",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}